Smart Bar -- fix which caused a small gap to appear on some buttons e.g. previously if you clicked "Region Options" there would be a grey border gap on the tab

--- a/standard-admin.css
+++ b/standard-admin.css
@@ -330,10 +330,10 @@ table td {
     padding-top: var(--rhythm-s);
 }
 
-.breadcrumb {
+.smartbar li .breadcrumb.tab-active a:last-child {
     /* Increase */
-    padding-bottom: var(--rhythm-s-0);
-    padding-top: var(--rhythm-s-0);
+    padding-bottom: var(--rhythm-s);
+    padding-top: var(--rhythm-s);
 }
 
 th,
